Bug 131711 - INSERT INDEX ENTRY DIALOG: Wrong target of help button
Summary: INSERT INDEX ENTRY DIALOG: Wrong target of help button
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords: notBibisectable, regression
Depends on:
Blocks: Help-Link
  Show dependency treegraph
 
Reported: 2020-03-30 14:16 UTC by Dieter
Modified: 2023-01-09 14:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dieter 2020-03-30 14:16:00 UTC
Steps to reproduce

1. Insert => Table of Contens, Indexes => Index Entry
2. Press Help button

Actual target: Edit Index Entry [1]
Expected target: Insert Index Entry [2]

F1 works.

[1] https://help.libreoffice.org/7.0/en-GB/text/swriter/01/02160000.html?System=WIN&DbPAR=WRITER&HID=modules/swriter/ui/indexentry/dialog-action_area1#bm_@@nowidget@@

[2] https://help.libreoffice.org/7.0/en-GB/text/swriter/01/04120100.html?&DbPAR=WRITER&System=WIN

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 1c9ced04189c9d23ffea05d5570960b54b05ef28
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: CL
Comment 1 Xisco Faulí 2020-03-30 18:00:24 UTC
Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: 11e6582b23b983fde4b04ece5b37c546bcd98a43
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

but not in

Version: 6.3.0.0.alpha1+
Build ID: c98b1f1cd43b3e109bcaf6324ef2d1f449b34099
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2020-03-31 10:01:42 UTC
I tried to bisect this issue but the results are not correct.
Comment 3 Xisco Faulí 2020-03-31 10:02:14 UTC
@Caolán, I thought you might be interested in this issue
Comment 4 Caolán McNamara 2020-04-01 14:20:45 UTC
possibly from https://git.libreoffice.org/help/commit/52b29ea4c9f46921d2d7e156dc3532a15800a131 because there is just the one actual dialog with two different titles
Comment 5 Commit Notification 2020-04-01 15:30:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/f18c85aee69f8858e0833d2c71b0c2def70aabdb

tdf#131711 there are two help pages for the index dialog which has two modes
Comment 6 Commit Notification 2020-04-01 15:57:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4d25be13b6d2f4d1a83efa224cc02e92f20bef11

tdf#131711 there are two help pages for the index dialog which has two modes

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2020-04-01 15:58:44 UTC
I think that does the expected thing
Comment 8 Xisco Faulí 2020-04-15 12:05:48 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 24e1563b5db3de5abac0d4fd0f737ec319e703e8
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue! Would it make sense to backport it to libreoffice-6-4 ?