tdf#131711 there are two help pages for the index dialog which has two modes

so at runtime suffix the two different widget helpids depending on their
mode to find the separate help pages for the widgets

Change-Id: I464544409aad3fd34b1ac62bf68e134596e900e9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91498
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>